# imageshare-rs

./: .gitignore  Cargo.toml
contrib/linux/nginx/: imageshare.conf
contrib/linux/systemd/: imageshare-rs.service
contrib/linux/tmpfiles.d/: imageshare-rs.conf
contrib/windows/: install-iis-for-winservice.ps1  install-iis-httpplatformhandler.ps1  install-service.ps1
public/: index.html
public/js/: upload-handler.js
src/: config.rs  main.rs  shutdown.rs
src/middleware/: contentlen.rs  csrf.rs  earlyretfut.rs  futs.rs  mod.rs  ratelim.rs  utf8textplain.rs
src/models/: api.rs  dropfs.rs  mime.rs  mod.rs  webdata.rs
src/web/: image.rs  mod.rs  paste.rs  static_files.rs  uds.rs
