[package]
name = "imageshare-rs"
license = "ISC"
version = "0.1.0"
edition = "2024"

[features]
default = ["serve-files"]
serve-files = ["dep:tower-http"]

[dependencies]
include_dir = "0.7"
tokio = { version = "1", features = ["fs", "net", "rt", "signal", "io-util"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["fs"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqids = "0.4"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
thiserror = "2"
governor = { version = "0.10", default-features = false, features = ["std"] }
http = "1"
pin-project-lite = "0.2"
futures-util = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
# I want my application to die horribly on panics.
# Unfortunately hyper catches panics and continues serving.
# This forces shutdown.
panic = "abort"
strip = "debuginfo"
